# ViennaGameJobSystem

./: .editorconfig  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  Doxyfile.doxygen  GameJobSystem.sln  README.md  VGJS.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.cmd  clang_cmake.bat  clang_cmake.sh  cmake_install.cmake  dag.tif  do_cmake.bat  documentation.html  doxygen.vcxproj  doxygen.vcxproj.filters  msvc_cmake.bat
Debug/: GameJobSystem.ilk
Docs/html/: _v_e_coro_8h.html  _v_e_coro_8h_source.html  _v_e_game_job_system_8h.html  _v_e_game_job_system_8h_source.html  _v_e_util_clock_8h.html  _v_e_util_clock_8h_source.html  _v_g_j_s_8h.html  _v_g_j_s_8h_source.html  _v_g_j_s_coro_8h.html  _v_g_j_s_coro_8h_source.html  annotated.html  classcoro_1_1_coro_class-members.html  classcoro_1_1_coro_class.html  classes.html  classvgjs_1_1_coro-members.html  classvgjs_1_1_coro.html  classvgjs_1_1_coro_3_01void_01_4-members.html  classvgjs_1_1_coro_3_01void_01_4.html  classvgjs_1_1_coro__base-members.html  classvgjs_1_1_coro__base.html  classvgjs_1_1_coro__promise-members.html  classvgjs_1_1_coro__promise.html  classvgjs_1_1_coro__promise_3_01void_01_4-members.html  classvgjs_1_1_coro__promise_3_01void_01_4.html  classvgjs_1_1_coro__promise__base-members.html  classvgjs_1_1_coro__promise__base.html  classvgjs_1_1_job-members.html  classvgjs_1_1_job.html  classvgjs_1_1_job__base-members.html  classvgjs_1_1_job__base.html  classvgjs_1_1_job_memory-members.html  classvgjs_1_1_job_memory.html  classvgjs_1_1_job_queue-members.html  classvgjs_1_1_job_queue.html  classvgjs_1_1_job_queue_f_i_f_o-members.html  classvgjs_1_1_job_queue_f_i_f_o.html  classvgjs_1_1_job_queue_lock_free-members.html  classvgjs_1_1_job_queue_lock_free.html  classvgjs_1_1_job_system-members.html  classvgjs_1_1_job_system.html  (+97 more)
GameJobSystem/: Doxyfile  GameJobSystem.h  GameJobSystem.vcxproj  GameJobSystem.vcxproj.filters  ThreadPool.cpp  ThreadPool.h  VECoro.h  VEGameJobSystem.h  VEGameJobSystem2.h  VETask.h  VEUtilClock.h  a.out  clang.txt  coro.cpp  coro2.cpp  coro3.cpp  cppcoro.cpp  docu.cpp  example_coro.cpp  example_mixed.cpp  example_tags.cpp  func.cpp  g.txt  gameloop.cpp  gcc.txt  linux.txt  log.json  main.cpp  main.cpp~RF2ece4c43.TMP  main.cpp~RF359531fd.TMP  mixed.cpp  phases.cpp  tags.cpp  task.h  test.cpp  vgjs.cpp
GameJobSystem/Debug/: vc140.idb
Release/: GameJobSystem.iobj  GameJobSystem.ipdb
examples/docu/: CMakeLists.txt  (+5 more)
include/: IntType.h  VGJS.h  VGJSCoro.h
src/: CMakeLists.txt  cmake_install.cmake  example_coro.cpp  example_mixed.cpp  log.json  test.cpp  vgjs.vcxproj  vgjs.vcxproj.filters
tests/: CMakeLists.txt  testlib.cpp
(+183 files in other folders)
